# cppCICDExample

./: .travis.yml  CMakeLists.txt  README.md  main.cpp
